test-cases/negative/test_147_function_parameter_without_type.lay
# negative test: function parameter without type annotation
# expected: parser should reject this

define function add that takes x and y and returns Number
  return x plus y


